--- a/package.json
+++ b/package.json
@@ -11,5 +11,8 @@
   "description": "",
   "devDependencies": {
     "danger": "^12.3.3"
+  },
+  "dependencies": {
+    "hcl2-parser": "^1.0.3"
   }
 }
