--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "danger": "^12.3.3"
   },
   "dependencies": {
-    "hcl2-parser": "^1.0.3"
+    "hcl2-parser": "^1.0.3",
+    "typescript": "^5.7.3"
   }
 }
