--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -21,7 +21,10 @@ jobs:
       - name: Install Dependencies
         run: npm install
 
+      - name: Install ts-node
+        run: npm install -g ts-node
+
       - name: Run Danger.js
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
-        run: npx danger ci
+        run: npx danger ci --dangerfile=dangerfile.ts
