Add type:module e ajustes

--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "danger-js-tutorial",
   "version": "1.0.0",
   "main": "index.js",
+  "type": "module",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node --loader ts-node/esm dangerfile.ts"
   },
   "keywords": [],
   "author": "",
