--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "description": "",
   "devDependencies": {
     "@types/node": "^22.13.8",
-    "danger": "^12.3.3"
+    "danger": "^12.3.3",
+    "ts-node": "^10.9.2"
   }
 }
