Voltei os arquivos CommonJS

--- a/package.json
+++ b/package.json
@@ -1,10 +1,9 @@
 {
   "name": "danger-js-tutorial",
   "version": "1.0.0",
-  "main": "index.js",
-  "type": "module",
+  "type": "commonjs",
   "scripts": {
-    "start": "node --loader ts-node/esm dangerfile.ts"
+    "start": "node dangerfile.js"
   },
   "keywords": [],
   "author": "",
