--- a/.github/workflows/danger.yml
+++ b/.github/workflows/danger.yml
@@ -27,4 +27,4 @@ jobs:
       - name: Run Danger.js no modo ESM
         env:
           DANGER_GITHUB_API_TOKEN: ${{ secrets.DANGER_GITHUB_API_TOKEN }}
-        run: node --loader ts-node/esm dangerfile.ts
+        run: npx danger ci --dangerfile=dangerfile.js
