--- a/package.json
+++ b/package.json
@@ -14,5 +14,8 @@
     "danger": "^12.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^4.9.5"
+  },
+  "dependencies": {
+    "@aws-sdk/client-rds": "^3.758.0"
   }
 }
